example/src/snapshots/adze_example__lambda_calculus__tests__lambda_application.snap
---
source: src/lambda_calculus.rs
expression: "grammar::parse(r\"(\\x.x) y\")"
---
Err(
    [
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 2,
            end: 2,
        },
        ParseError {
            reason: UnexpectedToken(
                ".",
            ),
            start: 3,
            end: 3,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 4,
            end: 4,
        },
        ParseError {
            reason: UnexpectedToken(
                ")",
            ),
            start: 5,
            end: 5,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 7,
            end: 7,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 8,
            end: 8,
        },
    ],
)
