example/src/snapshots/adze_example__lambda_calculus__tests__lambda_variable.snap
---
source: src/lambda_calculus.rs
expression: "grammar::parse(\"x\")"
---
Err(
    [
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 0,
            end: 0,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 1,
            end: 1,
        },
    ],
)
